// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContextConsumer passes snapshot 1`] = `
Object {
  "$$typeof": Symbol(react.context),
  "_calculateChangedBits": null,
  "_context": Object {
    "$$typeof": Symbol(react.context),
    "Consumer": [Circular],
    "Provider": Object {
      "$$typeof": Symbol(react.provider),
      "_context": [Circular],
    },
    "_calculateChangedBits": null,
    "_currentRenderer": null,
    "_currentRenderer2": null,
    "_currentValue": Client {
      "activeOperations": Object {},
      "createOperationContext": [Function],
      "createRequestOperation": [Function],
      "debugTarget": Target {
        "addEventListener": [Function],
        "dispatchEvent": [Function],
        "listeners": Array [],
        "removeEventListener": [Function],
      },
      "dispatchOperation": [Function],
      "exchange": [Function],
      "executeMutation": [Function],
      "executeQuery": [Function],
      "executeSubscription": [Function],
      "fetch": undefined,
      "fetchOptions": undefined,
      "maskTypename": false,
      "operations$": [Function],
      "preferGetMethod": false,
      "reexecuteOperation": [Function],
      "requestPolicy": "cache-first",
      "results$": [Function],
      "suspense": false,
      "url": "/graphql",
    },
    "_currentValue2": Client {
      "activeOperations": Object {},
      "createOperationContext": [Function],
      "createRequestOperation": [Function],
      "debugTarget": Target {
        "addEventListener": [Function],
        "dispatchEvent": [Function],
        "listeners": Array [],
        "removeEventListener": [Function],
      },
      "dispatchOperation": [Function],
      "exchange": [Function],
      "executeMutation": [Function],
      "executeQuery": [Function],
      "executeSubscription": [Function],
      "fetch": undefined,
      "fetchOptions": undefined,
      "maskTypename": false,
      "operations$": [Function],
      "preferGetMethod": false,
      "reexecuteOperation": [Function],
      "requestPolicy": "cache-first",
      "results$": [Function],
      "suspense": false,
      "url": "/graphql",
    },
    "_threadCount": 0,
  },
}
`;

exports[`ContextProvider passes snapshot 1`] = `
Object {
  "$$typeof": Symbol(react.provider),
  "_context": Object {
    "$$typeof": Symbol(react.context),
    "Consumer": Object {
      "$$typeof": Symbol(react.context),
      "_calculateChangedBits": null,
      "_context": [Circular],
    },
    "Provider": [Circular],
    "_calculateChangedBits": null,
    "_currentRenderer": null,
    "_currentRenderer2": null,
    "_currentValue": Client {
      "activeOperations": Object {},
      "createOperationContext": [Function],
      "createRequestOperation": [Function],
      "debugTarget": Target {
        "addEventListener": [Function],
        "dispatchEvent": [Function],
        "listeners": Array [],
        "removeEventListener": [Function],
      },
      "dispatchOperation": [Function],
      "exchange": [Function],
      "executeMutation": [Function],
      "executeQuery": [Function],
      "executeSubscription": [Function],
      "fetch": undefined,
      "fetchOptions": undefined,
      "maskTypename": false,
      "operations$": [Function],
      "preferGetMethod": false,
      "reexecuteOperation": [Function],
      "requestPolicy": "cache-first",
      "results$": [Function],
      "suspense": false,
      "url": "/graphql",
    },
    "_currentValue2": Client {
      "activeOperations": Object {},
      "createOperationContext": [Function],
      "createRequestOperation": [Function],
      "debugTarget": Target {
        "addEventListener": [Function],
        "dispatchEvent": [Function],
        "listeners": Array [],
        "removeEventListener": [Function],
      },
      "dispatchOperation": [Function],
      "exchange": [Function],
      "executeMutation": [Function],
      "executeQuery": [Function],
      "executeSubscription": [Function],
      "fetch": undefined,
      "fetchOptions": undefined,
      "maskTypename": false,
      "operations$": [Function],
      "preferGetMethod": false,
      "reexecuteOperation": [Function],
      "requestPolicy": "cache-first",
      "results$": [Function],
      "suspense": false,
      "url": "/graphql",
    },
    "_threadCount": 0,
  },
}
`;
